# sdk

./: .gitignore  Package.swift  README.md  compliance-report-23680722586.txt  docker-compose.compliance.yml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: acceptance-9flow.yml  acceptance.yml  ci.yml  compliance.yml  cross-sdk-vectors.yml  deprecate.yml  pr-hygiene.yml  publish.yml  unyank.yml
acceptance/: common.sh  results-2026-03-28-v2.txt  results-2026-03-28-v3.txt  results-2026-03-28.txt  results-live-final.txt  results-live.txt  run-all.sh
acceptance/dotnet/: AcceptanceFlows.csproj  Program.cs
acceptance/elixir/: mix.exs  test_flows.exs
acceptance/go/: go.mod  go.sum  main.go
acceptance/java/: build.gradle.kts  settings.gradle.kts
acceptance/python/: test_flows.py
acceptance/ruby/: test_flows.rb
acceptance/rust/: Cargo.toml
acceptance/rust/src/: main.rs
acceptance/swift/: Package.swift
acceptance/swift/Sources/: main.swift
acceptance/typescript/: package.json  test_flows.ts  tsconfig.json
dotnet/: README.md  RemitMd.sln
dotnet/RemitMd/: A2A.cs  ApiClient.cs  CliSigner.cs  Errors.cs  HttpSigner.cs  MockRemit.cs  Models.cs  RemitMd.csproj  Signer.cs  Wallet.cs  X402Client.cs  X402Paywall.cs
dotnet/RemitMd.Tests/: A2ATests.cs  AcceptanceTests.cs  CliSignerTests.cs  ComplianceTests.cs  ErrorTests.cs  GoldenVectorTests.cs  HttpSignerTests.cs  RemitMd.Tests.csproj  WalletTests.cs  X402Tests.cs
dotnet/RemitMd/SemanticKernel/: RemitMdPlugin.cs
dotnet/examples/MockExample/: MockExample.csproj  Program.cs
dotnet/examples/QuickStart/: Program.cs
elixir/: .coveralls.json  README.md  mix.exs
elixir/examples/: quickstart.exs
elixir/lib/: remit_md.ex
elixir/lib/remit_md/: a2a.ex  application.ex  cli_signer.ex  errors.ex  http.ex  http_signer.ex  keccak.ex  mock.ex  models.ex  signer.ex  wallet.ex  x402_client.ex  x402_paywall.ex
elixir/test/: acceptance_test.exs  cli_signer_test.exs  compliance_test.exs  eip712_vector_test.exs  http_signer_test.exs  remit_md_test.exs
examples/demo-agent/: pyproject.toml
examples/demo-agent/src/: main.py
examples/demo-agent/src/scenarios/: bounty_lifecycle.py  escrow_lifecycle.py  faucet.py  stream_lifecycle.py  tab_lifecycle.py
examples/demo-services/code-review/: Dockerfile  package.json
examples/demo-services/data-api/: Dockerfile  package.json
examples/demo-services/llm-api/: Dockerfile  package.json
go/: README.md  a2a.go  a2a_test.go  acceptance_test.go  cli_signer.go  cli_signer_test.go  compliance_test.go  errors.go  errors_test.go  go.mod  go.sum  golden_vectors_test.go  http.go  http_signer.go  http_signer_test.go  mock.go  mock_test.go  models.go  remitmd.go  signer.go  signer_test.go  wallet.go  wallet_test.go  x402.go  x402_client.go  x402_client_test.go  x402_test.go
go/examples/mock_test/: main.go
go/examples/pay/: main.go
go/langchain/: tools.go  tools_test.go
java/: README.md  build.gradle.kts  settings.gradle.kts
java/examples/: QuickStart.java  QuickStart.kt
ows-policy/: README.md  package-lock.json  package.json  tsconfig.json
ows-policy/examples/: base-mainnet.json  base-sepolia.json  chain-lock-only.json
ows-policy/src/: remit-policy.ts
ows-policy/tests/: test_policy.ts
python/: LICENSE  README.md  pyproject.toml
python/src/remitmd/: __init__.py  _http.py  a2a.py  cli_signer.py  client.py  errors.py  http_signer.py  ows_signer.py  provider.py  signer.py  wallet.py  x402.py
python/src/remitmd/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  openai_agents.py
python/src/remitmd/models/: __init__.py  bounty.py  common.py  deposit.py  dispute.py  escrow.py  invoice.py  reputation.py  stream.py  tab.py
python/src/remitmd/testing/: __init__.py  local.py  mock.py
python/tests/: test_a2a.py  test_cli_signer.py  test_errors.py  test_golden_vectors.py  test_http_signer.py  test_integrations.py  test_mock.py  test_ows_integration.py  test_ows_signer.py  test_provider.py  test_wallet.py  test_x402.py
python/tests/acceptance/: conftest.py  test_all_flows.py  test_bounty.py  test_deposit.py  test_direct.py  test_escrow.py  test_stream.py  test_tab.py  test_x402.py
python/tests/compliance/: __init__.py  conftest.py  test_auth.py  test_escrows.py  test_payments.py  test_tabs.py
ruby/: .rubocop.yml  Gemfile  README.md  remitmd.gemspec
ruby/examples/: quickstart.rb
ruby/lib/: remitmd.rb
ruby/lib/remitmd/: a2a.rb  cli_signer.rb  errors.rb  http.rb  http_signer.rb  keccak.rb  mock.rb  models.rb  signer.rb  wallet.rb  x402_client.rb  x402_paywall.rb
ruby/spec/: acceptance_spec.rb  cli_signer_spec.rb  compliance_spec.rb  error_spec.rb  golden_vectors_spec.rb  http_signer_spec.rb  spec_helper.rb  wallet_spec.rb  x402_spec.rb
rust/: Cargo.toml  README.md
rust/examples/: quickstart.rs
rust/src/: a2a.rs  cli_signer.rs  compliance.rs  error.rs  http.rs  http_signer.rs  lib.rs  mock.rs  models.rs  signer.rs  wallet.rs  x402.rs
rust/tests/: acceptance.rs  cli_signer_test.rs  http_signer_test.rs
swift/: Package.swift  README.md
swift/Examples/: Quickstart.swift
swift/Sources/RemitMd/: A2A.swift  CliSigner.swift  Errors.swift  HttpSigner.swift  HttpTransport.swift  Keccak.swift  Mock.swift  Models.swift  RemitMd.swift  Signer.swift  Wallet.swift  X402Client.swift  X402Paywall.swift
swift/Tests/RemitMdTests/: AcceptanceTests.swift  CliSignerTests.swift  ComplianceTests.swift  EIP712VectorTests.swift  ErrorTests.swift  HttpSignerTests.swift  WalletTests.swift  X402Tests.swift
test-vectors/: eip712.json
typescript/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
typescript/src/: a2a.ts  cli-signer.ts  client.ts  errors.ts  http-signer.ts  http.ts  index.ts  ows-signer.ts  provider.ts  signer.ts  wallet.ts  x402.ts
typescript/tests/: test_a2a.ts  test_cli_signer.ts  test_errors.ts  test_golden_vectors.ts  test_http_signer.ts  test_integrations.ts  test_mock.ts  test_ows_integration.ts  test_ows_signer.ts  test_permit.ts  test_provider.ts  test_wallet.ts  test_x402.ts
(+78 files in other folders)
