[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remitmd"
version = "0.2.2"
description = "Python SDK for the remit.md universal AI payment protocol"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{name = "remit.md", email = "hello@remit.md"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "httpx>=0.27",
    "eth-account>=0.12",
    "eth-typing>=3.0",
    "pydantic>=2.0",
    "web3>=6.0",
]

[project.urls]
Homepage = "https://remit.md"
Repository = "https://github.com/remit-md/sdk"
Documentation = "https://remit.md"

[project.optional-dependencies]
ows = ["open-wallet-standard>=1.0"]
langchain = ["langchain>=0.2", "langchain-core>=0.2"]
crewai = ["crewai>=0.30"]
autogen = ["pyautogen>=0.2"]
openai-agents = ["openai-agents>=0.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-httpx>=0.30",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S"]
ignore = ["S101", "N818"]  # S101: allow assert in tests; N818: exception names per spec (no Error suffix)

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

# Integration modules depend on optional packages (langchain, crewai, etc.)
# that aren't installed in dev - disable strict subclassing / decorator checks.
[[tool.mypy.overrides]]
module = "remitmd.integrations.*"
disallow_subclassing_any = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
