[package]
name = "remitmd"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
description = "DEPRECATED: Use pay-cli instead. See https://pay-skill.com/docs/cli"
license = "MIT"
repository = "https://github.com/remit-md/pay-cli"
homepage = "https://pay-skill.com"
documentation = "https://pay-skill.com/docs/cli"
keywords = ["payments", "usdc", "ethereum", "ai-agents", "blockchain"]
categories = ["finance", "api-bindings", "network-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-float"] }
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
getrandom = "0.2"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
which = "7"
dirs = "5"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rust_decimal_macros = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
getrandom = "0.2"
