[package]
name = "acceptance-flows"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "acceptance-flows"
path = "src/main.rs"

[dependencies]
remitmd = { path = "../../rust" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
hex = "0.4"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
getrandom = "0.2"
rust_decimal = { version = "1", features = ["serde-float"] }
